--- a/lecturacomic.html
+++ b/lecturacomic.html
@@ -135,7 +135,7 @@
               <source controls src="./audio/voz_en_off_004.mp3" type="audio/mp3">
             </audio>
 
-            <video class="c-video video_inferior" controls poster="./img/img_boceto.jpg"
+            <video class="c-video video_inferior" controls poster="./img/miniaturas/video 002B.jpeg"
               src="./video/escenas/video_escena_002_B.mp4">
             </video>
 
@@ -160,7 +160,8 @@
               <source src="./audio/Voz_en_off_006.wav" type="audio/wav">
             </audio>
 
-            <video class="c-video video_inferior" controls poster="#" src="./video/escenas/video_escena_003.mp4">
+            <video class="c-video video_inferior" controls poster="/img/miniaturas/video 004.jpeg"
+              src="./video/escenas/video_escena_004.mp4">
             </video>
 
           </article>
@@ -192,7 +193,7 @@
       <!-- Paper 5 -->
       <div id="p5" class="pagina">
         <div class="front">
-          <div class="front-content">
+          <article class="front-content">
 
             <audio controls class="audio_superior">
               <source src="./audio/voz_en_off_009.wav" type="audio/wav">
@@ -214,11 +215,11 @@
 
 
 
-          </div>
+          </article>
         </div>
 
         <div class="back">
-          <div class="back-content">
+          <article class="back-content">
 
             <video class="c-video video_superior" controls poster="./img/miniaturas/video 007.png"
               src="./video/escenas/video_escena_007.mp4">
@@ -236,110 +237,69 @@
               <source src="./audio/voz_en_off_012.wav" type="audio/wav">
             </audio>
 
-          </div>
+          </article>
         </div>
       </div>
 
 
-       <!-- Paper 6 -->
-       <div id="p6" class="pagina">
+      <!-- Paper 6 -->
+      <div id="p6" class="pagina">
         <div class="front">
-          <div class="front-content">
-
-            <audio controls class="audio_superior">
-              <source src="./audio/voz_en_off_009.wav" type="audio/wav">
+          <article class="front-content">
+            <div class="cuadro_img">
+              <img class="escene-img video_superior" src="./img/miniaturas/salto de tiempo.jpg" alt="salto_tiempo">
+            </div>
+            <audio controls class="audio_medio">
+              <source src="./audio/voz_en_off_013.wav" type="audio/wav">
             </audio>
 
-            <video class="c-video" controls poster="./img/miniaturas/video 006.png"
-              src="./video/escenas/video_escena_006.mp4">
+            <video class="c-video" controls poster="./img/miniaturas/video 009.png"
+              src="./video/escenas/video_escena_009.mp4">
             </video>
 
-            <div class="cuadro_img">
-              <img class="escene-img video_medio" src="./img/miniaturas/salto de tiempo.jpg" alt="salto_tiempo">
-            </div>
-
             <audio controls class="audio_inferior">
-              <source src="./audio/voz_en_off_010.wav" type="audio/wav">
+              <source src="./audio/voz_en_off_014.wav" type="audio/wav">
             </audio>
 
-
-
-
-
-          </div>
+          </article>
         </div>
 
         <div class="back">
-          <div class="back-content">
+          <article class="back-content">
 
-            <video class="c-video video_superior" controls poster="./img/miniaturas/video 007.png"
-              src="./video/escenas/video_escena_007.mp4">
+            <video class="c-video video_superior" controls poster="./img/miniaturas/video 010.png"
+              src="./video/escenas/video_escena_010.mp4">
             </video>
 
             <audio controls class="audio_medio">
-              <source src="./audio/Voz_en_off_011.wav" type="audio/wav">
+              <source src="./audio/voz_en_off_015.wav" type="audio/wav">
             </audio>
 
-            <video class="c-video video_medio" controls poster="./img/miniaturas/video 008.png"
-              src="./video/escenas/video_escena_008.mp4">
-            </video>
+            <div class="cuadro_img">
+              <img class="escene-img" src="./img/miniaturas/escena_final.jpg" alt="escena escena_final">
+            </div>
 
-            <audio controls class="audio_inferior">
-              <source src="./audio/voz_en_off_012.wav" type="audio/wav">
-            </audio>
-            
-          </div>
+            <p class="bg-danger parrafo py-2 px-5 text-white mb-0 rounded-bottom">Continuara...</p>
+
+
+
+          </article>
         </div>
       </div>
 
-       <!-- Paper 7 -->
-       <div id="p7" class="pagina">
+      <!-- Paper 7 -->
+      <div id="p7" class="pagina">
         <div class="front">
-          <div class="front-content">
+          <article class="front-content bg-dark">
 
-            <audio controls class="audio_superior">
-              <source src="./audio/voz_en_off_009.wav" type="audio/wav">
-            </audio>
-
-            <video class="c-video" controls poster="./img/miniaturas/video 006.png"
-              src="./video/escenas/video_escena_006.mp4">
-            </video>
-
-            <div class="cuadro_img">
-              <img class="escene-img video_medio" src="./img/miniaturas/salto de tiempo.jpg" alt="salto_tiempo">
-            </div>
-
-            <audio controls class="audio_inferior">
-              <source src="./audio/voz_en_off_010.wav" type="audio/wav">
-            </audio>
-
-
-
-
-
-          </div>
+          </article>
         </div>
 
         <div class="back">
-          <div class="back-content">
+          <article class="back-content bg-dark">
 
-            <video class="c-video video_superior" controls poster="./img/miniaturas/video 007.png"
-              src="./video/escenas/video_escena_007.mp4">
-            </video>
 
-            <audio controls class="audio_medio">
-              <source src="./audio/Voz_en_off_011.wav" type="audio/wav">
-            </audio>
-
-            <video class="c-video video_medio" controls poster="./img/miniaturas/video 008.png"
-              src="./video/escenas/video_escena_008.mp4">
-            </video>
-
-            <audio controls class="audio_inferior">
-              <source src="./audio/voz_en_off_012.wav" type="audio/wav">
-            </audio>
-            
-          </div>
+          </article>
         </div>
       </div>
 
