--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>SpaceRose-Home</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-  <link rel="shortcut icon" href="./Img/favicon.ico">
+  <link rel="shortcut icon" href="./img/favicon.ico">
   <link rel="stylesheet" href="./styles/main.css" />
 </head>
 
@@ -77,7 +77,7 @@
       <h1 class="text-bold text-white">Personajes</h1>
       <p class="parrafo text-white">Conoce a nuestros protagonistas</p>
 
-      <article class="col-10 my-5">
+      <article class="col-10 my-5 text-center">
 
         <button type="button" data-toggle="modal" data-target="#modalkaterine">
           <img src="./img/personajes/Katerine.png" alt="">
@@ -97,190 +97,189 @@
         <button type="button" data-toggle="modal" data-target="#modalAldrin">
           <img src="./img/personajes/aldrin.png" alt="">
         </button>
-
-
-        <!-- Modal -->
-        <div class="modal fade modal_content" id="modalkaterine" tabindex="-1" aria-labelledby="ModalLabelkaterine"
-          aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header bg-danger">
-                <h5 class="modal-title" id="ModalLabelkaterine"></h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body p-5">
-                <div class="d-flex align-items-center justify-content-center col-12">
-                  <img class="col-5 img-fluid" src="./img/personajes/Katerine.png" alt="">
-                  <article class="col-8">
-                    <h3>Katherine Johnson</h3>
-                    <p>Física/Matemática</p>
-                  </article>
-                </div>
-                <div class="my-3 col-10">
-                  <p><span class="text-bold">Pais: </span>Estados unidos</p>
-                  <p><span class="text-bold">Premios: </span>Medalla de Oro del congreso de los Estados Unidos</p>
-                  <p class="text-justify">Mujer afrodescendiente que realizó los cálculos matemáticos que
-                    hicieron posible el despegue de la nave espacial: Apollo 11.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="modal fade" id="modalkranz" tabindex="-1" aria-labelledby="ModalLabelkranz" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header bg-danger">
-                <h5 class="modal-title" id="ModalLabelkranz"></h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body p-5">
-                <div class="d-flex align-items-center justify-content-center ">
-                  <img class="col-5 img-fluid" src="./img/personajes/Kranz.png" alt="">
-                  <article class="col-8">
-                    <h3>Gene Kranz</h3>
-                    <p>Ingeniero/ director de vuelo</p>
-                  </article>
-                </div>
-                <div class="my-3">
-                  <p><span class="text-bold">Pais: </span>Estados unidos</p>
-                  <p><span class="text-bold">Premios: </span>Medalla de la Nasa al liderazgo excepcional, Medalla
-                    Presidencial de la Libertad, Medalla de la NASA de Servicios Distinguidos</p>
-                  <p class="text-justify">Director de vuelo en los programas de vuelo Géminis y Apollo de la NASA,
-                    gracias a su carisma, inteligencia y capacidad de liderazgo, los problemas que surgieron en el
-                    vuelo, fueron resueltos de forma práctica para mantener a los astronautas sanos y salvos.</p>
-                </div>
-
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="modal fade" id="modalExtra" tabindex="-1" aria-labelledby="ModalLabelExtra" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header bg-danger">
-                <h5 class="modal-title" id="ModalLabelExtra"></h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body p-5">
-                <div class="d-flex align-items-center justify-content-center">
-                  <img class="col-4" src="./img/personajes/extra masculino.png" alt="">
-                  <article class="col-8">
-                    <h2>Leo Smith</h2>
-                    <p>Extra</p>
-                  </article>
-                </div>
-                <div class="my-3">
-
-                  <p><span class="text-bold">Pais: </span>Estados unidos</p>
-                  <p><span class="text-bold">Premios: </span>Mejor Extra del año</p>
-
-                  <p>Este personaje nos estará acompañando en algunas escenas en el transcurso de la historia,
-                    representa a los personajes secundarios y que por motivos de presupuesto, solo él fue elegido.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="modal fade" id="modalNeils" tabindex="-1" aria-labelledby="ModalLabelNeils" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header bg-danger">
-                <h5 class="modal-title" id="ModalLabelNeils"></h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body p-5">
-                <div class="d-flex align-items-center justify-content-center">
-                  <img class="col-4" src="./img/personajes/neils.png" alt="">
-                  <article class="col-8">
-                    <h2>Neil Armstrong</h2>
-                    <p>Astronauta</p>
-                  </article>
-                </div>
-                <div class="my-3">
-                  <p><span class="text-bold">Pais: </span>Estados unidos</p>
-                  <p><span class="text-bold">Misiones: </span>Apolo 11, Gemini 8</p>
-                  <p>Siendo también un ingeniero aeroespacial, piloto de guerra, piloto de pruebas y profesor
-                    universitario, fue el primer el hombre en pisar la luna, autor de las palabras : <span
-                      class="text-bold">"Es un pequeño paso para un hombre, pero un gran salto para la humanidad"</span>
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="modal fade" id="modalCollin" tabindex="-1" aria-labelledby="ModalLabelCollin" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header bg-danger">
-                <h5 class="modal-title" id="ModalLabelCollin"></h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body p-5">
-                <div class="d-flex align-items-center justify-content-center">
-                  <img class="col-4" src="./img/personajes/collin.png" alt="">
-                  <article class="col-8">
-                    <h2>Michael Collins</h2>
-                    <p>Astronauta</p>
-                  </article>
-                </div>
-                <div class="my-3">
-                  <p><span class="text-bold">Pais: </span>Estados unidos</p>
-                  <p><span class="text-bold">Misiones: </span>Apolo 11, Gemini 10</p>
-                  <p>Piloto y tripulante encargado de mantener el módulo de mando del Apolo 11 en órbita
-                    alrededor de la Luna, si bien no piso suelo lunar, su aporte es significativo.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="modal fade" id="modalAldrin" tabindex="-1" aria-labelledby="ModalLabelAldrin" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header bg-danger">
-                </h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body p-5">
-                <div class="d-flex align-items-center justify-content-center">
-                  <img class="col-4" src="./img/personajes/aldrin.png" alt="">
-                  <article class="col-8">
-                    <h2>Buzz Aldrin</h2>
-                    <p>Astronauta</p>
-                  </article>
-                </div>
-                <div class="my-3">
-                  <p><span class="text-bold">Pais: </span>Estados unidos</p>
-                  <p><span class="text-bold">Misiones: </span>Apolo 11, Gemini 12</p>
-                  <p>Segundo hombre en pisar la luna, se dedico a recoger rocas lunares, instalar instrumentos
-                    científicos y tomar fotografías con Neils Armstrong, fue quien dejo los objetos conmemorativos
-                    relacionados a todo el proceso de la carrera espacial, además de un disco de silicio con grabaciones
-                    de 73 países diferentes.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
       </article>
+
+      <!-- Modal -->
+      <div class="modal fade modal_content" id="modalkaterine" tabindex="-1" aria-labelledby="ModalLabelkaterine"
+        aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header bg-danger">
+              <h5 class="modal-title" id="ModalLabelkaterine"></h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body p-5">
+              <div class="d-flex align-items-center justify-content-center col-12">
+                <img class="col-5 img-fluid" src="./img/personajes/Katerine.png" alt="">
+                <article class="col-8">
+                  <h3>Katherine Johnson</h3>
+                  <p>Física/Matemática</p>
+                </article>
+              </div>
+              <div class="my-3 col-10">
+                <p><span class="text-bold">Pais: </span>Estados unidos</p>
+                <p><span class="text-bold">Premios: </span>Medalla de Oro del congreso de los Estados Unidos</p>
+                <p class="text-justify">Mujer afrodescendiente que realizó los cálculos matemáticos que
+                  hicieron posible el despegue de la nave espacial: Apollo 11.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal fade" id="modalkranz" tabindex="-1" aria-labelledby="ModalLabelkranz" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header bg-danger">
+              <h5 class="modal-title" id="ModalLabelkranz"></h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body p-5">
+              <div class="d-flex align-items-center justify-content-center ">
+                <img class="col-5 img-fluid" src="./img/personajes/Kranz.png" alt="">
+                <article class="col-8">
+                  <h3>Gene Kranz</h3>
+                  <p>Ingeniero/ director de vuelo</p>
+                </article>
+              </div>
+              <div class="my-3">
+                <p><span class="text-bold">Pais: </span>Estados unidos</p>
+                <p><span class="text-bold">Premios: </span>Medalla de la Nasa al liderazgo excepcional, Medalla
+                  Presidencial de la Libertad, Medalla de la NASA de Servicios Distinguidos</p>
+                <p class="text-justify">Director de vuelo en los programas de vuelo Géminis y Apollo de la NASA,
+                  gracias a su carisma, inteligencia y capacidad de liderazgo, los problemas que surgieron en el
+                  vuelo, fueron resueltos de forma práctica para mantener a los astronautas sanos y salvos.</p>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal fade" id="modalExtra" tabindex="-1" aria-labelledby="ModalLabelExtra" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header bg-danger">
+              <h5 class="modal-title" id="ModalLabelExtra"></h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body p-5">
+              <div class="d-flex align-items-center justify-content-center">
+                <img class="col-4" src="./img/personajes/extra masculino.png" alt="">
+                <article class="col-8">
+                  <h2>Leo Smith</h2>
+                  <p>Extra</p>
+                </article>
+              </div>
+              <div class="my-3">
+
+                <p><span class="text-bold">Pais: </span>Estados unidos</p>
+                <p><span class="text-bold">Premios: </span>Mejor Extra del año</p>
+
+                <p>Este personaje nos estará acompañando en algunas escenas en el transcurso de la historia,
+                  representa a los personajes secundarios y que por motivos de presupuesto, solo él fue elegido.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal fade" id="modalNeils" tabindex="-1" aria-labelledby="ModalLabelNeils" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header bg-danger">
+              <h5 class="modal-title" id="ModalLabelNeils"></h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body p-5">
+              <div class="d-flex align-items-center justify-content-center">
+                <img class="col-4" src="./img/personajes/neils.png" alt="">
+                <article class="col-8">
+                  <h2>Neil Armstrong</h2>
+                  <p>Astronauta</p>
+                </article>
+              </div>
+              <div class="my-3">
+                <p><span class="text-bold">Pais: </span>Estados unidos</p>
+                <p><span class="text-bold">Misiones: </span>Apolo 11, Gemini 8</p>
+                <p>Siendo también un ingeniero aeroespacial, piloto de guerra, piloto de pruebas y profesor
+                  universitario, fue el primer el hombre en pisar la luna, autor de las palabras : <span
+                    class="text-bold">"Es un pequeño paso para un hombre, pero un gran salto para la humanidad"</span>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal fade" id="modalCollin" tabindex="-1" aria-labelledby="ModalLabelCollin" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header bg-danger">
+              <h5 class="modal-title" id="ModalLabelCollin"></h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body p-5">
+              <div class="d-flex align-items-center justify-content-center">
+                <img class="col-4" src="./img/personajes/collin.png" alt="">
+                <article class="col-8">
+                  <h2>Michael Collins</h2>
+                  <p>Astronauta</p>
+                </article>
+              </div>
+              <div class="my-3">
+                <p><span class="text-bold">Pais: </span>Estados unidos</p>
+                <p><span class="text-bold">Misiones: </span>Apolo 11, Gemini 10</p>
+                <p>Piloto y tripulante encargado de mantener el módulo de mando del Apolo 11 en órbita
+                  alrededor de la Luna, si bien no piso suelo lunar, su aporte es significativo.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal fade" id="modalAldrin" tabindex="-1" aria-labelledby="ModalLabelAldrin" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header bg-danger">
+              </h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body p-5">
+              <div class="d-flex align-items-center justify-content-center">
+                <img class="col-4" src="./img/personajes/aldrin.png" alt="">
+                <article class="col-8">
+                  <h2>Buzz Aldrin</h2>
+                  <p>Astronauta</p>
+                </article>
+              </div>
+              <div class="my-3">
+                <p><span class="text-bold">Pais: </span>Estados unidos</p>
+                <p><span class="text-bold">Misiones: </span>Apolo 11, Gemini 12</p>
+                <p>Segundo hombre en pisar la luna, se dedico a recoger rocas lunares, instalar instrumentos
+                  científicos y tomar fotografías con Neils Armstrong, fue quien dejo los objetos conmemorativos
+                  relacionados a todo el proceso de la carrera espacial, además de un disco de silicio con grabaciones
+                  de 73 países diferentes.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
 
     </div>
   </Section>
