cambio formato de audios

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="container py-2">
       <nav class="navbar navbar-light navbar-expand-lg">
         <a href="./index.html" class="navbar-brand logo">
-          <img class="img-fluid logo" src="./Img/logo Spacerose.png" alt="Spacerose" />
+          <img class="img-fluid logo" src="./img/logo Spacerose.png" alt="Spacerose" />
         </a>
         <button class="navbar-toggler btn-menu" type="button" data-toggle="collapse" data-target="#mainMenu">
           <span class="navbar-toggler-icon"></span>
