--- a/lecturacomic.html
+++ b/lecturacomic.html
@@ -8,7 +8,7 @@
   <title>SpaceRose-Home</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-  <link rel="shortcut icon" href="./Img/favicon.ico">
+  <link rel="shortcut icon" href="./img/favicon.ico">
   <link rel="stylesheet" href="./styles/lectura.css" />
   <link rel="stylesheet" href="./styles/recursoscomic.css" />
 </head>
@@ -18,7 +18,7 @@
     <header class="container py-2">
       <nav class="navbar navbar-light navbar-expand-lg">
         <a href="./index.html" class="navbar-brand logo">
-          <img class="img-fluid logo" src="./Img/logo Spacerose.png" alt="Spacerose" />
+          <img class="img-fluid logo" src="./img/logo Spacerose.png" alt="Spacerose" />
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu">
           <span class="navbar-toggler-icon"></span>
@@ -118,7 +118,7 @@
             </video>
 
             <audio controls class="audio_inferior">
-              <source controls src="./audio/voz_en_off_003.wav" type="audio/wav">
+              <source controls src="./audio/voz_en_off_003.mp3" type="audio/mp3">
             </audio>
 
           </article>
@@ -149,7 +149,7 @@
           <article class="front-content">
 
             <audio controls class="audio_superior">
-              <source src="./audio/voz_en_off_005.wav" type="audio/wav">
+              <source src="./audio/voz_en_off_005.mp3" type="audio/mp3">
             </audio>
 
             <video class="c-video" controls poster="./img/miniaturas/video 003.png"
@@ -157,7 +157,7 @@
             </video>
 
             <audio controls class="audio_medio">
-              <source src="./audio/Voz_en_off_006.wav" type="audio/wav">
+              <source src="./audio/Voz_en_off_006.mp3" type="audio/mp3">
             </audio>
 
             <video class="c-video video_inferior" controls poster="/img/miniaturas/video 004.jpeg"
@@ -171,7 +171,7 @@
           <article class="back-content">
 
             <audio controls class="audio_superior">
-              <source src="./audio/voz_en_off_007.wav" type="audio/wav">
+              <source src="./audio/voz_en_off_007.mp3" type="audio/mp3">
             </audio>
 
             <div class="cuadro_img">
@@ -183,7 +183,7 @@
             </video>
 
             <audio controls class="audio_inferior">
-              <source src="./audio/voz_en_off_008.wav" type="audio/wav">
+              <source src="./audio/voz_en_off_008.mp3" type="audio/mp3">
             </audio>
 
           </article>
@@ -196,7 +196,7 @@
           <article class="front-content">
 
             <audio controls class="audio_superior">
-              <source src="./audio/voz_en_off_009.wav" type="audio/wav">
+              <source src="./audio/voz_en_off_009.mp3" type="audio/">
             </audio>
 
             <video class="c-video" controls poster="./img/miniaturas/video 006.png"
@@ -208,7 +208,7 @@
             </div>
 
             <audio controls class="audio_inferior">
-              <source src="./audio/voz_en_off_010.wav" type="audio/wav">
+              <source src="./audio/voz_en_off_010.mp3" type="audio/wav">
             </audio>
 
 
@@ -226,7 +226,7 @@
             </video>
 
             <audio controls class="audio_medio">
-              <source src="./audio/Voz_en_off_011.wav" type="audio/wav">
+              <source src="./audio/Voz_en_off_011.mp3" type="audio/mp3">
             </audio>
 
             <video class="c-video video_medio" controls poster="./img/miniaturas/video 008.png"
@@ -234,7 +234,7 @@
             </video>
 
             <audio controls class="audio_inferior">
-              <source src="./audio/voz_en_off_012.wav" type="audio/wav">
+              <source src="./audio/voz_en_off_012.mp3" type="audio/mp3">
             </audio>
 
           </article>
@@ -250,7 +250,7 @@
               <img class="escene-img video_superior" src="./img/miniaturas/salto de tiempo.jpg" alt="salto_tiempo">
             </div>
             <audio controls class="audio_medio">
-              <source src="./audio/voz_en_off_013.wav" type="audio/wav">
+              <source src="./audio/voz_en_off_013.mp3" type="audio/mp3">
             </audio>
 
             <video class="c-video" controls poster="./img/miniaturas/video 009.png"
@@ -258,7 +258,7 @@
             </video>
 
             <audio controls class="audio_inferior">
-              <source src="./audio/voz_en_off_014.wav" type="audio/wav">
+              <source src="./audio/voz_en_off_014.mp3" type="audio/mp3">
             </audio>
 
           </article>
@@ -272,7 +272,7 @@
             </video>
 
             <audio controls class="audio_medio">
-              <source src="./audio/voz_en_off_015.wav" type="audio/wav">
+              <source src="./audio/voz_en_off_015.mp3" type="audio/mp3">
             </audio>
 
             <div class="cuadro_img">
