--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="nav-link  mr-5 text-white text-bold" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  mr-5 text-white text-bold" href="./lecturacomic.html">Comic</a>
+              <a class="nav-link  mr-5 text-white text-bold" href="./comic.html">Comic</a>
             </li>
           </ul>
         </div>
@@ -41,7 +41,7 @@
     <div class="container d-flex justify-content-center m-5">
       <article class="text-white  text-center text-bold ">
         <h1>Bienvenido a esta aventura espacial</h1>
-        <a type="submit" class=" text-white d-inline" href="./lecturacomic.html">Despeguemos</a>
+        <a type="submit" class=" text-white d-inline" href="./comic.html">Despeguemos</a>
       </article>
     </div>
 
@@ -59,7 +59,7 @@
             llegada del hombre a la luna en el Apollo 11, este relato será narrado por Katherine Johnson, mujer
             afrodescendiente que realizó los cálculos que hicieron posible dicho suceso.
           </p>
-          <a type="submit" class="mt-2 px-5 py-2 btn_leer text-white text-bold" href="./lecturacomic.html">
+          <a type="submit" class="mt-2 px-5 py-2 btn_leer text-white text-bold" href="./comic.html">
             Leer comic
           </a>
         </article>
