--- a/comic.html
+++ b/comic.html
@@ -16,18 +16,13 @@
 
 <body>
 
-
-
-
 	<div class="container">
 		<div class="contenido__video">
 			<video class="video" autoplay="autoplay" loop="loop" muted="muted">
 				<source src="./video/bg_comic.mp4" type="video/mp4" />
 			</video>
 		</div>
-
-
-
+		
 		<header class="clearfix">
 			<nav class="navbar navbar-light navbar-expand-lg">
 				<a href="./index.html" class="navbar-brand">
@@ -49,12 +44,12 @@
 			</nav>
 		</header>
 
-		<div id="cbp-fwslider" class="cbp-fwslider">
+		<div id="cbp-fwslider" class="cbp-fwslider video_responsive">
 			<ul class="txt-cont">
 				<li>
 					<a href="#">
 						<video src="./video/voz_en_off/Audio 1 y 2.mp4" poster="./img/Poster_audio.png" width="640"
-							height="480" id="myvideo"></video>
+							height="400" id="myvideo"></video>
 					</a>
 					<button onclick="vidplay()" class="despega">despega!</button>
 				</li>
@@ -62,199 +57,193 @@
 				<li>
 					<a href="#">
 						<video src="./video/escenas/video_escena_001.mp4" poster="./img/miniaturas/video 001.png"
-							width="640" height="480" id="myvideo2"></video>
+							width="640" height="400" id="myvideo2"></video>
 					</a>
 					<button onclick="vidplay2()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/voz_en_off/Audio 3.mp4" poster="./img/Poster_audio.png" width="640"
-							height="480" id="myvideo3"></video>
+							height="400" id="myvideo3"></video>
 					</a>
 					<button onclick="vidplay3()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/escenas/video_escena_002_A.mp4"
-							poster="./img/miniaturas/video 002A.png" width="640" height="480" id="myvideo4"></video>
+							poster="./img/miniaturas/video 002A.png" width="640" height="400" id="myvideo4"></video>
 					</a>
 					<button onclick="vidplay4()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/voz_en_off/Audio 4.mp4" poster="./img/Poster_audio.png" width="640"
-							height="480" id="myvideo5"></video>
+							height="400" id="myvideo5"></video>
 					</a>
 					<button onclick="vidplay5()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/escenas/video_escena_002_B.mp4"
-							poster="./img/miniaturas/video 002B.png" width="640" height="480" id="myvideo6"></video>
+							poster="./img/miniaturas/video 002B.png" width="640" height="400" id="myvideo6"></video>
 					</a>
 					<button onclick="vidplay6()" class="despega">despega!</button>
 				</li>
 
 				<li>
-					<a href="#"><video src="./video/voz_en_off/Audio 5.mp4" poster="./img/Poster_audio.png" width="640"
-							height="480" id="myvideo7"></video>
+					<a href="#"><video src="./video/voz_en_off/Audio 5.mp4" poster="./img/Poster_audio.png" width="600"
+							height="400" id="myvideo7"></video>
 					</a>
 					<button onclick="vidplay7()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/escenas/video_escena_003.mp4"
-							poster="./img/miniaturas/video 003.png" width="640" height="480" id="myvideo8"></video>
+							poster="./img/miniaturas/video 003.png" width="640" height="400" id="myvideo8"></video>
 					</a>
 					<button onclick="vidplay8()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/voz_en_off/Audio 6.mp4" poster="./img/Poster_audio.png" width="640"
-							height="480" id="myvideo9"></video>
+							height="400" id="myvideo9"></video>
 					</a>
 					<button onclick="vidplay9()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/escenas/video_escena_004.mp4"
-							poster="./img/miniaturas/video 004.png" width="640" height="480" id="myvideo10"></video>
+							poster="./img/miniaturas/video 004.png" width="640" height="400" id="myvideo10"></video>
 					</a>
 					<button onclick="vidplay10()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/voz_en_off/Audio 7.mp4" poster="./img/Poster_audio.png" width="640"
-							height="480" id="myvideo11"></video>
+							height="400" id="myvideo11"></video>
 					</a>
 					<button onclick="vidplay11()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/escenas/video_escena_005.mp4"
-							poster="./img/miniaturas/video 005.png" width="640" height="480" id="myvideo12"></video>
+							poster="./img/miniaturas/video 005.png" width="640" height="400" id="myvideo12"></video>
 					</a>
 					<button onclick="vidplay12()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/voz_en_off/Audio 8.mp4" poster="./img/Poster_audio.png" width="640"
-							height="480" id="myvideo13"></video>
+							height="400" id="myvideo13"></video>
 					</a>
 					<button onclick="vidplay13()" class="despega">despega!</button>
 				</li>
 
 				<li>
-					<a href="#"><img src="./img/miniaturas/salto tiempo.svg" width="640" height="480"
-							id="myvideotiempo1"></img>
+					<video src="./video/voz_en_off/Audio 8.mp4" poster="./img/saltodetiempo.png" width="640"
+						height="400" id="myvideotiempo1"></video>
 					</a>
-					<button onclick="vidplaytiempo1()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/voz_en_off/Audio 9.mp4" poster="./img/Poster_audio.png" width="640"
-							height="480" id="myvideo14"></video>
+							height="400" id="myvideo14"></video>
 					</a>
 					<button onclick="vidplay14()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/escenas/video_escena_006.mp4"
-							poster="./img/miniaturas/video 006.png" width="640" height="480" id="myvideo15"></video>
+							poster="./img/miniaturas/video 006.png" width="640" height="400" id="myvideo15"></video>
 					</a>
 					<button onclick="vidplay15()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/voz_en_off/Audio 10.mp4" poster="./img/Poster_audio.png" width="640"
-							height="480" id="myvideo16"></video>
+							height="400" id="myvideo16"></video>
 					</a>
 					<button onclick="vidplay16()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/escenas/video_escena_007.mp4"
-							poster="./img/miniaturas/video 007.png" width="640" height="480" id="myvideo17"></video>
+							poster="./img/miniaturas/video 007.png" width="640" height="400" id="myvideo17"></video>
 					</a>
 					<button onclick="vidplay17()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/voz_en_off/Audio 11.mp4" poster="./img/Poster_audio.png" width="640"
-							height="480" id="myvideo18"></video>
+							height="400" id="myvideo18"></video>
 					</a>
 					<button onclick="vidplay18()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/escenas/video_escena_008.mp4"
-							poster="./img/miniaturas/video 008.png" width="640" height="480" id="myvideo19"></video>
+							poster="./img/miniaturas/video 008.png" width="640" height="400" id="myvideo19"></video>
 					</a>
 					<button onclick="vidplay19()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/voz_en_off/Audio 12.mp4" poster="./img/Poster_audio.png" width="640"
-							height="480" id="myvideo20"></video>
+							height="400" id="myvideo20"></video>
 					</a>
 					<button onclick="vidplay20()" class="despega">despega!</button>
 				</li>
 
 				<li>
-					<a href="#"> <img src="./img/miniaturas/salto tiempo.svg" alt="" width="640" height="480"
-							id="myvideotiempo2">
+					<video src="./video/voz_en_off/Audio 8.mp4" poster="./img/saltodetiempo.png" width="640"
+						height="400" id="myvideotiempo2"></video>
 					</a>
-					<button onclick="vidplaytiempo2()" class="despega">despega!</button>
 				</li>
 
 
 				<li>
 					<a href="#"><video src="./video/voz_en_off/Audio 13.mp4" poster="./img/Poster_audio.png" width="640"
-							height="480" id="myvideo21"></video>
+							height="400" id="myvideo21"></video>
 					</a>
 					<button onclick="vidplay21()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/escenas/video_escena_009.mp4"
-							poster="./img/miniaturas/video 009.png" width="640" height="480" id="myvideo22"></video>
+							poster="./img/miniaturas/video 009.png" width="640" height="400" id="myvideo22"></video>
 					</a>
 					<button onclick="vidplay22()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/voz_en_off/Audio 14.mp4" poster="./img/Poster_audio.png" width="640"
-							height="480" id="myvideo23"></video>
+							height="400" id="myvideo23"></video>
 					</a>
 					<button onclick="vidplay23()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/escenas/video_escena_010.mp4"
-							poster="./img/miniaturas/video 010.png" width="640" height="480" id="myvideo24"></video>
+							poster="./img/miniaturas/video 010.png" width="640" height="400" id="myvideo24"></video>
 					</a>
 					<button onclick="vidplay24()" class="despega">despega!</button>
 				</li>
 
 				<li>
 					<a href="#"><video src="./video/voz_en_off/Audio 15.mp4" poster="./img/Poster_audio.png" width="640"
-							height="480" id="myvideo25"></video>
+							height="400" id="myvideo25"></video>
 					</a>
 					<button onclick="vidplay25()" class="despega">despega!</button>
 				</li>
 				<li>
-					<a href="#"> <img src="./img/miniaturas/salto tiempo.svg" alt="" width="640" height="480"
-							id="myvideo26">
+					<video src="./video/voz_en_off/Audio 8.mp4" poster="./img/continuará.png" width="640" height="400"
+						id="myvideocontinuara"></video>
 					</a>
-					<button onclick="vidplay26()" class="despega">despega!</button>
 				</li>
 
 
 			</ul>
 		</div>
-
-
-
 
 
 		<script>
@@ -271,6 +260,7 @@
 				theVideo.load();
 				theVideo.controls = false;
 			}
+
 			//
 
 			var theVideo2 = document.getElementById('myvideo2'),
@@ -286,9 +276,8 @@
 				theVideo2.load();
 				theVideo2.controls = false;
 			}
+
 			//
-
-
 			var theVideo3 = document.getElementById('myvideo3'),
 				theTxt = document.querySelector('.txt-cont')
 
@@ -302,8 +291,8 @@
 				theVideo3.load();
 				theVideo3.controls = false;
 			}
-			//
 
+			//
 			var theVideo4 = document.getElementById('myvideo4'),
 				theTxt = document.querySelector('.txt-cont')
 
@@ -317,8 +306,8 @@
 				theVideo4.load();
 				theVideo4.controls = false;
 			}
-			//
 
+			//
 			var theVideo5 = document.getElementById('myvideo5'),
 				theTxt = document.querySelector('.txt-cont')
 
@@ -332,6 +321,7 @@
 				theVideo5.load();
 				theVideo5.controls = false;
 			}
+
 			//
 			var theVideo6 = document.getElementById('myvideo6'),
 				theTxt = document.querySelector('.txt-cont')
@@ -346,8 +336,8 @@
 				theVideo6.load();
 				theVideo6.controls = false;
 			}
-			//
 
+			//
 			var theVideo7 = document.getElementById('myvideo7'),
 				theTxt = document.querySelector('.txt-cont')
 
@@ -362,8 +352,8 @@
 				theVideo7.controls = false;
 			}
 
-			//
 
+			//
 			var theVideo8 = document.getElementById('myvideo8'),
 				theTxt = document.querySelector('.txt-cont')
 
@@ -377,9 +367,8 @@
 				theVideo8.load();
 				theVideo8.controls = false;
 			}
+
 			//
-
-
 			var theVideo9 = document.getElementById('myvideo9'),
 				theTxt = document.querySelector('.txt-cont')
 
@@ -393,8 +382,8 @@
 				theVideo9.load();
 				theVideo9.controls = false;
 			}
-			//
 
+			//
 			var theVideo10 = document.getElementById('myvideo10'),
 				theTxt = document.querySelector('.txt-cont')
 
@@ -408,8 +397,8 @@
 				theVideo10.load();
 				theVide10.controls = false;
 			}
-			//
 
+			//
 			var theVideo11 = document.getElementById('myvideo11'),
 				theTxt = document.querySelector('.txt-cont')
 
@@ -423,6 +412,7 @@
 				theVideo11.load();
 				theVideo11.controls = false;
 			}
+
 			//
 			var theVideo12 = document.getElementById('myvideo12'),
 				theTxt = document.querySelector('.txt-cont')
@@ -437,8 +427,8 @@
 				theVideo12.load();
 				theVideo12.controls = false;
 			}
-			//
 
+			//
 			var theVideo13 = document.getElementById('myvideo13'),
 				theTxt = document.querySelector('.txt-cont')
 
@@ -452,9 +442,8 @@
 				theVideo13.load();
 				theVideo13.controls = false;
 			}
+
 			//
-
-
 			var theVideotiempo1 = document.getElementById('myvideotiempo1'),
 				theTxt = document.querySelector('.txt-cont')
 
@@ -483,8 +472,8 @@
 				theVideo14.load();
 				theVide14.controls = false;
 			}
-			//
 
+			//
 			var theVideo15 = document.getElementById('myvideo15'),
 				theTxt = document.querySelector('.txt-cont')
 
@@ -513,8 +502,8 @@
 				theVideo16.load();
 				theVideo16.controls = false;
 			}
-			//
 
+			//
 			var theVideo17 = document.getElementById('myvideo17'),
 				theTxt = document.querySelector('.txt-cont')
 
@@ -530,7 +519,6 @@
 			}
 
 			//
-
 			var theVideo18 = document.getElementById('myvideo18'),
 				theTxt = document.querySelector('.txt-cont')
 
@@ -544,9 +532,8 @@
 				theVideo18.load();
 				theVideo18.controls = false;
 			}
+
 			//
-
-
 			var theVideo19 = document.getElementById('myvideo19'),
 				theTxt = document.querySelector('.txt-cont')
 
@@ -560,8 +547,8 @@
 				theVideo19.load();
 				theVideo19.controls = false;
 			}
-			//
 
+			//
 			var theVideo20 = document.getElementById('myvideo20'),
 				theTxt = document.querySelector('.txt-cont')
 
@@ -575,6 +562,7 @@
 				theVideo20.load();
 				theVideo20.controls = false;
 			}
+
 			//
 			var theVideotiempo2 = document.getElementById('myvideotiempo2'),
 				theTxt = document.querySelector('.txt-cont')
@@ -589,8 +577,8 @@
 				theVideotiempo2.load();
 				theVideotiempo2.controls = false;
 			}
-			//
 
+			//
 			var theVideo21 = document.getElementById('myvideo21'),
 				theTxt = document.querySelector('.txt-cont')
 
@@ -604,6 +592,7 @@
 				theVideo21.load();
 				theVideo21.controls = false;
 			}
+
 			//
 			var theVideo22 = document.getElementById('myvideo22'),
 				theTxt = document.querySelector('.txt-cont')
@@ -618,8 +607,8 @@
 				theVideo22.load();
 				theVideo22.controls = false;
 			}
-			//
 
+			//
 			var theVideo23 = document.getElementById('myvideo23'),
 				theTxt = document.querySelector('.txt-cont')
 
@@ -635,7 +624,6 @@
 			}
 
 			//
-
 			var theVideo24 = document.getElementById('myvideo24'),
 				theTxt = document.querySelector('.txt-cont')
 
@@ -649,9 +637,8 @@
 				theVideo24.load();
 				theVideo24.controls = false;
 			}
+
 			//
-
-
 			var theVideo25 = document.getElementById('myvideo25'),
 				theTxt = document.querySelector('.txt-cont')
 
@@ -665,8 +652,9 @@
 				theVideo25.load();
 				theVideo25.controls = false;
 			}
-			//
-			var theVideo26 = document.getElementById('myvideo26'),
+
+			// imagen_continuara
+			var theVideo26 = document.getElementById('myvideocontinuara'),
 				theTxt = document.querySelector('.txt-cont')
 
 			function vidplay26() {
@@ -679,13 +667,6 @@
 				theVideo26.load();
 				theVideo26.controls = false;
 			}
-			//
-
-
-
-
-
-
 		</script>
 
 	</div>
@@ -700,6 +681,8 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src="js/jquery.cbpFWSlider.min.js"></script>
 	<script src="./script.js"></script>
+
+
 
 
 	<script>
