--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     </div>
   </section>
 
+  <!-- personajes -->
   <Section class="personage">
     <div class="container d-flex flex-column justify-content-center align-items-center">
       <h1 class="text-bold text-white">Personajes</h1>
